refactor: 코드 표현 방식 변경